support force local environment where clustering isn’t needed; change garbage collection configuration